--- a/style.css
+++ b/style.css
@@ -4,6 +4,7 @@ body {
   font-family: Roboto, Helvetic, sans-serif;
   font-size: 1em;
   line-height: 1.25em;
+  box-sizing: border-box;
 }
 
 header,
@@ -14,11 +15,48 @@ footer {
 
 /* HEADER */
 .banner {
-  width: 600px;
-  background: url(../HTML-CSS-Coursework-Week3/images/cake-unsplash-sml.jpg);
+  /* width: 600px; */
+  /* background-image: url(https://images.unsplash.com/photo-1518047601542-79f18c655718?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1050&q=80); */
+  background-image: url(../images/brooke-lark-pGM4sjt_BdQ-unsplash.jpg);
   background-repeat: no-repeat;
+  background-size: cover;
+  background-position: 0px -36px;
+  background-color: #d400001a;
+  background-blend-mode: overlay;
+  display: flex;
+  flex-direction: column;
+}
+
+h1 {
+  font-size: 1.2em;
+  text-align: right;
+  width: 70%;
+  align-self: flex-end;
+}
+
+/* Nav */
+.hamburger {
+  align-self: flex-start;
+  padding: 15px;
+}
+
+nav {
+  display: none;
+}
+
+nav ul li {
+  display: inline-block;
 }
 
 /* MAIN */
 
 /* FOOTER */
+
+@media (min-width: 540px) {
+}
+
+@media (min-width: 900px) {
+  nav {
+    display: block;
+  }
+}
