--- a/style.css
+++ b/style.css
@@ -14,30 +14,38 @@ footer {
 }
 
 /* HEADER */
+header {
+  height: 30vh;
+}
+
 .banner {
-  /* width: 600px; */
+  height: inherit;
   /* background-image: url(https://images.unsplash.com/photo-1518047601542-79f18c655718?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1050&q=80); */
   background-image: url(../images/brooke-lark-pGM4sjt_BdQ-unsplash.jpg);
   background-repeat: no-repeat;
   background-size: cover;
-  background-position: 0px -36px;
+  background-position: 0px -70px;
   background-color: #d400001a;
   background-blend-mode: overlay;
   display: flex;
   flex-direction: column;
+  align-items: flex-end;
+  justify-content: space-between;
 }
 
 h1 {
   font-size: 1.2em;
+  font-weight: 500;
   text-align: right;
   width: 70%;
-  align-self: flex-end;
+  padding-right: 15px;
 }
 
 /* Nav */
 .hamburger {
-  align-self: flex-start;
+  /* align-self: flex-start; */
   padding: 15px;
+  width: 30px;
 }
 
 nav {
@@ -49,8 +57,43 @@ nav ul li {
 }
 
 /* MAIN */
+section {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+/* Hero */
+.hero-text {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.hero-img {
+  width: 100%;
+  height: 100%;
+  object-fit: contain;
+}
+
+.gallery {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 10px;
+  justify-content: center;
+  margin-top: 10px;
+}
+
+.sml-img {
+  width: 48%;
+  height: 140px;
+  object-fit: cover;
+}
 
 /* FOOTER */
+
+footer {
+  display: flex;
+  flex-wrap: wrap;
+}
 
 @media (min-width: 540px) {
 }
