--- a/style.css
+++ b/style.css
@@ -50,6 +50,8 @@ h1 {
   text-align: right;
   width: 70%;
   padding-right: 15px;
+      background-color: #fa8072;
+
 }
 
 /* Nav */
@@ -80,9 +82,19 @@ section {
   padding: 10px 15px 0 15px;
 }
 
+h2{
+     font-family: 'Gochi Hand', cursive;
+}
+
 .hero-description{
     margin-top: -5px;
 }
+
+.hero-img-container{
+    width: 100%;
+    order: 0;
+}
+
 
 .hero-img {
   width: 100%;
@@ -95,7 +107,7 @@ section {
   flex-wrap: wrap;
   gap: 10px;
   justify-content: center;
-  margin-top: 15px;
+  margin: 20px 0;
 }
 
 .sml-img {
@@ -126,16 +138,102 @@ footer li {
 
 footer p {
   text-align: center;
+  margin: 30px 0;
 }
 
 footer p, footer li {
     font-size: 12px;
 }
 
+
+/* MEDIA QUERIES */
+
 @media (min-width: 540px) {
+
+header{
+    height: 20vh;
 }
 
-@media (min-width: 900px) {
+.banner{
+    background-position: 0 -230px;
+}
+
+h1{
+    position: relative;
+    top: 33px;
+    color: white;
+    width: 50%;
+    margin-right: 40px;
+    padding: 15px 20px 15px 0;
+}
+
+.hamburger{
+    display: none;
+}
+
+  nav {
+   display: block;
+    position: relative;
+    top: 60px;
+    background-color: #ffe5d9;
+    width: 100%;
+    text-align: right;
+     font-family: 'Gochi Hand', cursive;
+   
+  }
+
+
+nav ul li{
+        padding: 0 25px;
+}
+
+section{
+     margin-top: 100px;
+}
+
+.hero-text{
+    order: 0;
+    width: 40%;
+    margin-left: 0px;
+    text-align: right;
+    justify-content: flex-end;
+}
+
+.hero-img-container{
+   width: 49%;
+    order: -1;
+    margin-left: 10px;
+}
+
+.hero-img{
+ transition: transform 0.5s ease;
+
+}
+
+.hero-img:hover{
+transform:scale(1.1);
+}
+
+.sml-img{
+    width: 23%;
+    height:  200px;
+    transition: transform 0.5s ease;
+
+}
+    
+.sml-img:hover{
+transform:scale(1.3);
+}
+
+
+.footer-links{
+    display: flex;
+    justify-content: center;
+    gap: 60px;
+}
+}
+
+ @media (min-width: 900px) {
 body{
     width:900px;
 }
@@ -152,7 +250,6 @@ h1{
     position: relative;
     top: 55px;
     color: white;
-    background-color: #fa8072;
     width: 45%;
     margin-right: 40px;
     padding: 15px 20px 15px 0;
@@ -166,7 +263,6 @@ h1{
    display: block;
     position: relative;
     top: 60px;
-    background-color: #fa8072;
     width: 100%;
     text-align: right;
    
@@ -186,6 +282,15 @@ section{
     width: 45%;
 }
 
+h2{
+   
+    font-size: 2em;
+}
+
+.hero-description{
+    font-size:1.2em;
+}
+
 .hero-img-container{
     width: 45%;
     order: -1;
@@ -193,7 +298,10 @@ section{
 
 .sml-img{
     width: 24%;
+    height: 140px;
+
 }
+
 
 .footer-links{
     display: flex;
@@ -201,4 +309,4 @@ section{
     gap: 60px;
 }
 
-}
+} 
